# akari-poc

./: .env.example  .flake8  .gitignore  README.md  a.py  main.py  pyproject.toml  requirements-dev.txt
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  pr-ci.yml  pr-comment.yml
akari/: __init__.py  __main__.py  data.py  logger.py  module.py  router.py
docs/: AkariModule.md  architecture.md  module_development_guide.md
modules/: __init__.py  print.py  root.py  serial.py
modules/audio/: __init__.py  mic.py  speaker.py
modules/azure_openai/: __init__.py  llm.py  stt.py  tts.py
modules/gemini/: __init__.py  llm.py
modules/google/: __init__.py  stt.py  tts.py
modules/io/: __init__.py  save.py
modules/openai/: __init__.py  llm.py  stt.py  tts.py
modules/performance/: __init__.py  vad_stt_latency.py
modules/webrtcvad/: __init__.py  vad.py
plugins/no_print_checker/: no_print_checker.py  pyproject.toml
sample/: __init__.py  module.py
tests/: __init__.py  test_google_tts.py  test_sample_module.py  test_serial_module.py
