[build-system]
requires = ["poetry>=2.1.4"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.7"
azure-identity = "^1.25.0"
openai = "^1.108.1"
python-dotenv = "^1.1.1"
pyaudio = "^0.2.14"
audioop-lts = "^0.2.2"
google-cloud-aiplatform = "^1.115.0"
google-auth = "^2.40.3"
webrtcvad = "^2.0.10"
setuptools = "^80.9.0"
google-cloud-speech = "^2.33.0"
google-cloud-texttospeech = "^2.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
flake8 = "7.3.0"
mypy = "1.18.2"
isort = "6.0.1"
black = "25.9.0"
flake8-docstrings = "1.7.0"

no-print-checker = { path = "./plugins/no_print_checker", develop = true }
faker = "37.8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [".venv"]

[tool.black]
line-length = 120
